--- a/src/app/components/general/image/image.component.html
+++ b/src/app/components/general/image/image.component.html
@@ -1,2 +1,6 @@
-<div class="img-bg"><div [ngStyle]="loaded ? {'background-image': 'url(' + image.path + ')'} : {}"></div></div>
-<img src="{{image.path}}" alt="{{image.alt}}" loading="lazy">
+<div class="img-bg">
+  <div
+    [ngStyle]="loaded ? { 'background-image': 'url(' + image.path + ')' } : {}"
+  ></div>
+</div>
+<img src="{{ image.path }}" alt="{{ image.alt }}" loading="lazy" />
