--- a/src/app/components/views/projects/projects.component.html
+++ b/src/app/components/views/projects/projects.component.html
@@ -52,7 +52,7 @@
         [onClick]="openClient(author.id)"
         [type]="lt.PERSON"
         [name]="author.name"
-        [image]="author.image ? author.image : undefined"
+        [image]="author.image.path !== '' ? author.image : undefined"
         ><p>{{ author.name }}</p></app-button
       >
     </div>
