--- a/src/app/components/general/filter/filter.component.html
+++ b/src/app/components/general/filter/filter.component.html
@@ -1,20 +1,20 @@
-<div class="filterComp">
-  <div class="filterSelected">
-    <div *ngFor="let category of selectedFilter" class="selectedCategory">
-      <ng-container *ngIf="category.range">
-        <div class="selectedItem">
-          <p>{{ category.value[0] }} - {{ category.value[1] }}</p>
-          <span>X</span>
-        </div>
-      </ng-container>
-      <ng-container *ngIf="!category.range">
-        <div *ngFor="let item of category.value" class="selectedItem">
-          <p>{{ item }}</p>
-          <span>X</span>
-        </div>
-      </ng-container>
-    </div>
+<div class="filterSelected">
+  <div *ngFor="let category of selectedFilter" class="selectedCategory">
+    <ng-container *ngIf="category.range">
+      <div *ngIf="!isDefaultRangeValue(category)" class="selectedItem">
+        <p>{{ category.value[0] }} - {{ category.value[1] }}</p>
+        <span>X</span>
+      </div>
+    </ng-container>
+    <ng-container *ngIf="!category.range">
+      <div *ngFor="let item of category.value" class="selectedItem">
+        <p>{{ item }}</p>
+        <span>X</span>
+      </div>
+    </ng-container>
   </div>
+</div>
+<div class="filterComp">
   <div class="filterTitle">
     <div
       class="showFilter"
@@ -79,7 +79,9 @@
           range.values[0]
         }}; --max: {{ range.values[range.values.length - 1] }}"
       >
-        <output class="rangeFrom" for="{{ range.id }}_1">{{ r1.value }}</output>
+        <output #o1 class="rangeFrom" for="{{ range.id }}_1">{{
+          r1.value
+        }}</output>
         <div class="wrap">
           <label class="sr-only" for="{{ range.id }}_1">Value A:</label>
           <input
@@ -88,7 +90,7 @@
             [max]="range.values[range.values.length - 1]"
             [step]="range.step"
             value="{{ range.values[0] }}"
-            (input)="changeRange(range, r1)"
+            (input)="changeRange(range, r1, r2, o1, o2)"
             class="slider slider1"
             id="{{ range.id }}_1"
             #r1
@@ -100,13 +102,15 @@
             [max]="range.values[range.values.length - 1]"
             [step]="range.step"
             value="{{ range.values[range.values.length - 1] }}"
-            (input)="changeRange(range, r2)"
+            (input)="changeRange(range, r1, r2, o1, o2)"
             class="slider slider2"
             id="{{ range.id }}_2"
             #r2
           />
         </div>
-        <output class="rangeTo" for="{{ range.id }}_2">{{ r2.value }}</output>
+        <output #o2 class="rangeTo" for="{{ range.id }}_2">{{
+          r2.value
+        }}</output>
       </div>
     </div>
   </div>
