--- a/src/app/components/general/button/button.component.scss
+++ b/src/app/components/general/button/button.component.scss
@@ -2,9 +2,15 @@
 
 :host {
     @include flex-center;
+    & app-tooltip {
+        display:none;
+    }
     & img {
         @include preview-image;
         @include link;
+        &:hover ~ app-tooltip{
+            display:block;
+        }
     }
     & p {
         @include slimpill;
