--- a/src/app/components/general/contentbox/contentbox.component.html
+++ b/src/app/components/general/contentbox/contentbox.component.html
@@ -32,4 +32,7 @@
   <div class="bottom">
     <ng-content></ng-content>
   </div>
+  <div class="belowbottom">
+    <ng-content select="[bottom]"></ng-content>
+  </div>
 </div>
