--- a/src/app/components/views/career/career.component.html
+++ b/src/app/components/views/career/career.component.html
@@ -57,7 +57,7 @@
           <app-address [address]="item.address"></app-address>
         </div>
       </div>
-      <div #skills class="bot skills">
+      <div #skills bottom class="bot skills">
         <div
           class="showSkills"
           (click)="
