--- a/src/app/components/views/projects/projects.component.html
+++ b/src/app/components/views/projects/projects.component.html
@@ -78,7 +78,7 @@
     <h4>Entwickelt bei</h4>
     <div class="content">
       <app-button
-        [onClick]="openCareer(project.career.id)"
+        [onClick]="ol(project.career.url)"
         [type]="lt.OTHER"
         [name]="project.career.name"
         ><p>{{ project.career.name }}</p></app-button
