--- a/src/app/components/general/contentbox/contentbox.component.scss
+++ b/src/app/components/general/contentbox/contentbox.component.scss
@@ -48,28 +48,31 @@
         padding-bottom: $elem-border-radius;
         @include mobile-screen {
             grid-template-columns: 1fr;
-            grid-template-rows: auto auto auto auto;
+            grid-template-rows: auto auto auto auto auto;
             grid-template-areas:
                 "preview"
                 "desc"
                 "image"
-                "bottom";
+                "bottom"
+                "belowbottom";
         }
         @include tablet-screen {
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: auto auto auto;
+            grid-template-rows: auto auto auto auto;
             grid-template-areas:
                 "preview  preview"
                 "image  desc"
-                "bottom bottom";
+                "bottom bottom"
+                "belowbottom belowbottom";
         }
         @include desktop-screen {
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: auto auto auto;
+            grid-template-rows: auto auto auto auto;
             grid-template-areas:
                 "preview  preview"
                 "image  desc"
-                "image bottom";
+                "image bottom"
+                "belowbottom belowbottom";
         }
         & .preview {
             grid-area: preview;
@@ -91,6 +94,9 @@
         & .bottom {
             grid-area: bottom;
             @include flex-row-just;
+        }
+        & .belowbottom {
+            grid-area: belowbottom;
         }
     }
 }
